<resources>
    <string name="app_name">NewsApp_fase1</string>
    <string name="action_settings">Settings</string>

    <!--ToolsString-->
    <string name="tools_title">Title</string>
    <string name="tools_link">Link</string>
    <string name="tools_section">Section</string>
    <string name="tools_date">date</string>
    <string name="tools_author">author</string>

    <string name="refresh_button">Refresh</string>
    <string name="no_news">No articles found, please reload the app or check after some time</string>
    <string name="search_hint">Enter search terms here...</string>
    <string name="no_internet">No internet connection.</string>
    <string name="title">Recent Guardian articles about Films &amp; Cinema:</string>

    <!--Strings to be used for the option menu-->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Cinema &amp; Film Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>
</resources>
